fix: scroll of auxpane shows when LHS is collapsed

--- a/bundles/org.eclipse.orion.client.git/web/git/css/git.css
+++ b/bundles/org.eclipse.orion.client.git/web/git/css/git.css
@@ -1,5 +1,5 @@
 .auxpane {
-	overflow: visible;
+	overflow: hidden;
 }
 
 .repoDropdownList {
